--- a/src/main/resources/templates/IPSDashboard.html
+++ b/src/main/resources/templates/IPSDashboard.html
@@ -204,13 +204,13 @@ $(document).ready(function() {
 				type : "pie",
 				width : "315",
 				height : "315",
-				sliceColors : [ "#77b179", "#ff8f9f"]
+				sliceColors : [ "#c043fd", "#58cbe8"]
 
 			}), $("#INC1").sparkline([ mxsucc, mxfail ], {
 				type : "pie",
 				width : "315",
 				height : "315",
-				sliceColors : [ "#77b179", "#ff8f9f" ]
+				sliceColors : [ "#c043fd", "#58cbe8"]
 
 			})
 		};
@@ -314,11 +314,11 @@ $(document).ready(function() {
 									<div class="row mt-3">
 										<div class="col-4">
 											<p class="text-muted font-15 mb-1 text-truncate">Success</p>
-											<h4 style="background: #77b179; color:#e6e7e7;" th:text="${Mttomxsuccess}"></h4>
+											<h4 style="background: #c043fd; color:#e6e7e7;" th:text="${Mttomxsuccess}"></h4>
 										</div>
 										<div class="col-4">
 											<p class="text-muted font-15 mb-1 text-truncate">Failure</p>
-											<h4 style="background:#ff8f9f; color:#e6e7e7;" th:text="${MttomxFail}"></h4>
+											<h4 style="background:#58cbe8; color:black;" th:text="${MttomxFail}"></h4>
 										</div>
 										<!-- <div class="col-4">
 											<p class="text-muted font-15 mb-1 text-truncate">In
@@ -353,11 +353,11 @@ $(document).ready(function() {
 									<div class="row mt-3">
 										<div class="col-4">
 											<p class="text-muted font-15 mb-1 text-truncate">Success</p>
-											<h4 style="background: #77b179; color:#e6e7e7;" th:text="${Mxtomxsuccess}"></h4>
+											<h4 style="background: #c043fd; color:#e6e7e7;" th:text="${Mxtomxsuccess}"></h4>
 										</div>
 										<div class="col-4">
 											<p class="text-muted font-15 mb-1 text-truncate">Failure</p>
-											<h4 style="background: #ff8f9f; color:#e6e7e7;" th:text="${MxtomxFail}"></h4>
+											<h4 style="background: #58cbe8; color:black;" th:text="${MxtomxFail}"></h4>
 										</div>
 										<!-- <div class="col-4">
 											<p class="text-muted font-15 mb-1 text-truncate">In
