--- a/src/main/resources/templates/MMenupage.html
+++ b/src/main/resources/templates/MMenupage.html
@@ -603,7 +603,7 @@ jQuery(function($){
 				alt="Bornfire">
 
 			<div id="headerdiv">
-				<h3 style="font-size:18px;">BORNFIRE MESSAGE CONVERTION - MT-MX-MT</h3>
+				<h3 style="font-size:18px;">BORNFIRE MESSAGE CONVERTION</h3>
 			</div>
 
 			<div class="btn float-right" id="userdtl" title="Profile"
@@ -693,7 +693,7 @@ jQuery(function($){
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#adminsubmenu" id="admin"><i
 					class="fa fa-fw fa-university"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Admin Operation<i
+					style="margin-right: 5%; color: white;"></i>Admin Operation<i
 					id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="adminsubmenu" class="collapse submenu1 ">
@@ -755,7 +755,7 @@ jQuery(function($){
 			<li class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#Admin_Module" id="AdminModule"><i
 					class="fa fa-fw fa-university"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Admin Module <i
+					style="margin-right: 5%; color: white;"></i>Admin Module <i
 					id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="Admin_Module" class="collapse submenu1 ">
@@ -787,7 +787,7 @@ jQuery(function($){
 
 			<li class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#Operations" id="operations"><i class="fa fa-fw fa-tasks"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Operations <i
+					style="margin-right: 5%; color: white;"></i>Operations <i
 					id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="Operations" class="collapse submenu1 ">
@@ -804,7 +804,7 @@ jQuery(function($){
 			<li th:if="${IPSRoleMenu.menulist.contains('Audit_operations')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#inquiry" id="reports"><i class="fa fa-fw fa-tasks"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Inquiries <i
+					style="margin-right: 5%; color: white;"></i>Inquiries <i
 					id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="inquiry" class="collapse submenu1 ">
@@ -831,7 +831,7 @@ jQuery(function($){
 			<li th:if="${IPSRoleMenu.menulist.contains('Audit_operations')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#Reports" id="reports"><i class="fa fa-fw fa-edit"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Reports <i
+					style="margin-right: 5%; color: white;"></i>Reports <i
 					id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="Reports" class="collapse submenu1 ">
@@ -852,7 +852,7 @@ jQuery(function($){
 			<li th:if="${IPSRoleMenu.menulist.contains('Audit_operations')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#Audit_Logs" id="audit_logs"><i class="fa fa-fw fa-edit"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Audit Logs <i
+					style="margin-right: 5%; color: white;"></i>Audit Logs <i
 					id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="Audit_Logs" class="collapse submenu1 ">
@@ -872,7 +872,7 @@ jQuery(function($){
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				id="BSWIFTDashboard" href="javascript: void(0);"
 				onclick="contentLoad(this)"><i class="fa  fa-desktop"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Dashboards <!-- <i id="dropico" class="fa fa-caret-down"
+					style="margin-right: 5%; color: white;"></i>Dashboards <!-- <i id="dropico" class="fa fa-caret-down"
 					aria-hidden="true"></i> --> </a>
 
 				<div id="Dashboards" class="collapse submenu1 ">
@@ -888,7 +888,7 @@ jQuery(function($){
 			<li th:if="${IPSRoleMenu.menulist.contains('Audit_operations')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#Auditsubmenu" id="auditmenu"><i class="fa fa-fw fa-edit"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Audit
+					style="margin-right: 5%; color: white;"></i>Audit
 					Operations <i id="dropico" class="fa fa-caret-down"
 					aria-hidden="true"></i> </a>
 
@@ -907,7 +907,7 @@ jQuery(function($){
 			<li th:if="${IPSRoleMenu.menulist.contains('IPSOperations')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#IPSsubmenu" id="ipsMenu"><i class="fa fa-fw fa-tasks "
-					style="margin-right: 5%; color: darkgoldenrod;"></i>IPS Operations
+					style="margin-right: 5%; color: white;"></i>IPS Operations
 					<i id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="IPSsubmenu" class="collapse submenu1 ">
@@ -971,7 +971,7 @@ jQuery(function($){
 			<li th:if="${IPSRoleMenu.menulist.contains('Wallet_Master')}"
 				class="nav-item"><a class="nav-link"  onclick="contentLoad(this)"
 				 id="Wallet"><i  class="fa  fa-credit-card"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Wallet Master<i id="dropico" 
+					style="margin-right: 5%; color: white;"></i>Wallet Master<i id="dropico" 
 					aria-hidden="true"></i> </a>
 
 			</li>
@@ -980,7 +980,7 @@ jQuery(function($){
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#Monitoringsubmenu" id="monitoring"><i
 					class="fa  fa-desktop"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Monitoring<i
+					style="margin-right: 5%; color: white;"></i>Monitoring<i
 					id="dropico" class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
 				<div id="Monitoringsubmenu" class="collapse submenu1 ">
@@ -1046,7 +1046,7 @@ jQuery(function($){
 			<li th:if="${IPSRoleMenu.menulist.contains('MYT_Registration')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#my_t" id="my_t1"><i class="fa  fa-desktop"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>MyT
+					style="margin-right: 5%; color: white;"></i>MyT
 					Registration<i id="dropico" class="fa fa-caret-down"
 					aria-hidden="true"></i> </a>
 
@@ -1061,7 +1061,7 @@ jQuery(function($){
 				<li th:if="${IPSRoleMenu.menulist.contains('Consent_registration')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#cons_out_reg" id="my_t1"><i class="fa  fa-desktop"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Consent outgoing Registration<i id="dropico" class="fa fa-caret-down"
+					style="margin-right: 5%; color: white;"></i>Consent outgoing Registration<i id="dropico" class="fa fa-caret-down"
 					aria-hidden="true"></i> </a>
 
 				<div id="cons_out_reg" class="collapse submenu1 ">
@@ -1083,7 +1083,7 @@ jQuery(function($){
 <li th:if="${IPSRoleMenu.menulist.contains('Merchant_registration')}"
 				class="nav-item"><a class="nav-link" data-toggle="collapse"
 				href="#merchantreg" id="my_t1"><i class="fa  fa-desktop"
-					style="margin-right: 5%; color: darkgoldenrod;"></i>Merchant Registration
+					style="margin-right: 5%; color: white;"></i>Merchant Registration
 					<i id="dropico" class="fa fa-caret-down"
 					aria-hidden="true"></i> </a>
 
